# raymann

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.json  main.cpp  scene.json
scenes/: scene.ppm
src/: canvas.cpp  canvas.h  main.cpp
src/acceleration/: bounding_box.cpp  bounding_box.h  bvh.cpp  bvh.h  scene_element_proxy.cpp  scene_element_proxy.h
src/application/: config_parser.h  data_container.cpp  data_container.h  error.h  parameters.h  scene_parser.h  wavefront_reader.cpp  wavefront_reader.h
src/builder/: builder.h  plane_builder.h  shape_builder.cpp  shape_builder.h  sphere_builder.h
src/camera/: camera.cpp  camera.h
src/color/: coeff_spectrum.cpp  coeff_spectrum.h  em_spectrum.cpp  em_spectrum.h  light.h  rgb_spectrum.cpp  rgb_spectrum.h  spectrum.cpp  spectrum.h
src/composite/: builder.cpp  builder.h  element.cpp  element.h  intersection.cpp  intersection.h  iterator.cpp  iterator.h  properties.cpp  properties.h  scene.cpp  scene.h  scene_director.cpp  scene_director.h  scene_element.cpp  scene_element.h  traceable.cpp  traceable.h  world.cpp  world.h
src/container/: canvas.cpp  canvas.h
src/decorators/: element_deco.cpp  element_deco.h  material.cpp  material.h  traceable_deco.cpp  traceable_deco.h  transformer.cpp  transformer.h
src/distribution/: bxdf.cpp  bxdf.h  lambertian_brdf.cpp  lambertian_brdf.h  utilities.cpp  utilities.h
src/geometry/: bounding_box.h  cone.h  cube.h  cylinder.h  plane.h  primitive.cpp  primitive.h  quad.h  sphere.h  traceable.cpp  traceable.h  triangle.h
src/main/: raymann.cpp
src/materials/: bsdf.cpp  bsdf.h  dielectric.cpp  dielectric.h  emissive.cpp  emissive.h  isotropic.cpp  isotropic.h  lambertian.cpp  lambertian.h  material.cpp  material.h  material_properties.cpp  material_properties.h  matte.cpp  matte.h  metal.cpp  metal.h  standard.cpp  standard.h
src/math_utils/: mat4.h  math_utils.h  orthonormal.h  ray.h
src/renderers/: path_tracer.cpp  path_tracer.h  phong_model.cpp  phong_model.h  renderer.cpp  renderer.h
src/stochastic/: pdf.cpp  pdf.h  random.cpp  random.h  samples.cpp  samples.h  stochastic_method.cpp  stochastic_method.h
src/textures/: perlin.cpp  perlin.h  texture.cpp  texture.h
src/tools/: light.h  mat2.h  mat3.h  mat4.h  orthonormal.h  point3.h  ray.h  tools.h  vec2.h  vec3.h  vec4.h
src/transformations/: element_deco.cpp  element_deco.h  scene_element_decorator.cpp  scene_element_decorator.h  transformation.cpp  transformation.h  transformer.cpp  transformer.h
src/visitors/: renderer.cpp  renderer.h
src/world/: scene.cpp  scene.h  world.cpp  world.h
test/: CMakeLists.txt  application_test.cpp  boundingBox_test.cpp  camera_test.cpp  canvas_test.cpp  color_test.cpp  cone_test.cpp  cube_test.cpp  cylinder_test.cpp  gtesting.h  material_test.cpp  plane_test.cpp  primitive_test.cpp  properties_test.cpp  ray_test.cpp  sphere_test.cpp  testBuilder.cpp  testCamera.cpp  testCanvas.cpp  testMat.cpp  testPlane.cpp  testRay.cpp  testSphere.cpp  testTools.cpp  testTrans.cpp  testWorld.cpp  tools_test.cpp  transformer_test.cpp  triangle_test.cpp  utils.h  valid_input.txt  world_test.cpp
test/test_data/: invalid_input.txt  valid_input_vn.txt
